# free-search-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: AGENT_USAGE.md  API_KEYS.md  PROXY_AND_GATES.md  USAGE.md
scripts/: install.sh
src/search_mcp/: __main__.py  admin.py  aggregator.py  browser.py  cache.py  compare.py  config.py  documents.py  fetcher.py  formatting.py  gnews.py  keystore.py  login.py  net.py  ratelimit.py  research.py  server.py  structured.py  url_safety.py
src/search_mcp/engines/: __init__.py  anysearch.py  baidu.py  base.py  bilibili.py  bing.py  brave.py  brave_api.py  duckduckgo.py  google.py  google_cse.py  googlenews.py  mojeek.py  searx.py  serper.py  serpsearch.py  startpage.py  tavily.py  zhihu.py
tests/: conftest.py  test_admin.py  test_admin_proxy.py  test_anysearch.py  test_bilibili.py  test_brave_api.py  test_browser_proxy.py  test_cache_internals.py  test_cache_maxage.py  test_compare.py  test_dates.py  test_dedup_and_lead.py  test_docs_localization.py  test_documents_pagination.py  test_engines_extra.py  test_fetch_charset_doc.py  test_fetch_safety.py  test_filter_diagnostics.py  test_filters.py  test_formatting.py  test_gnews.py  test_google.py  test_google_cse.py  test_googlenews.py  test_install_script.py  test_keystore.py  test_net_gate.py  test_prompts.py  test_proxy_http.py  test_ratelimit.py  test_resources.py  test_searx.py  test_serp_fallback.py  test_serper.py  test_smoke.py  test_structured.py  test_tavily.py  test_url_safety.py  test_zhihu.py
